# codex-anhei4

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
config/bosses/: butcher.yaml
docs/: FUNCTIONS.md  INSTALL_FROM_GIT.md  REQUIRED_INFORMATION.md  USAGE.md
src/d4bot/: __init__.py  boss.py  capture.py  cli.py  combat.py  config.py  engine.py  input.py  inventory.py  loot.py  route.py  vision.py
tests/: test_combat.py  test_config.py  test_inventory.py
