[project]
name = "d4-barbarian-assistant"
version = "0.1.0"
description = "Screen-vision Diablo IV Barbarian automation prototype"
requires-python = ">=3.11"
dependencies = [
  "keyboard>=0.13.5",
  "mss>=10.0.0",
  "numpy>=2.2.0",
  "opencv-python>=4.11.0",
  "PyDirectInput>=1.0.4",
  "PyYAML>=6.0.2",
]

[project.scripts]
d4-assistant = "d4bot.cli:main"

[dependency-groups]
dev = ["pytest>=8.3.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d4bot"]

